[gd_scene load_steps=11 format=3 uid="uid://cfg06xxv1turn"]

[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="1_bci5f"]
[ext_resource type="Script" uid="uid://do3tm0jps0uhh" path="res://ui/dialogue_balloon/dialogue_balloon.gd" id="1_smusc"]
[ext_resource type="Script" uid="uid://byrec5x3e8q0i" path="res://ui/dialogue_balloon/responses_menu.gd" id="3_xs0yr"]
[ext_resource type="FontFile" uid="uid://b1nic8hb7y5lm" path="res://resources/fonts/Frost Scream.otf" id="4_j2kku"]
[ext_resource type="PackedScene" uid="uid://bbumw5xcjq0tn" path="res://ui/dialogue_balloon/response_container/dialogue_response_container.tscn" id="4_xs0yr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkmqt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_7r5tl"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxFlat_qkmqt")

[node name="DialogueBalloon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_smusc")
next_action = null
skip_action = null

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 1142.0
offset_bottom = 638.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7r5tl")

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator2" type="HSeparator" parent="Balloon/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainerResponse" type="MarginContainer" parent="Balloon/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 25

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/VBoxContainer/MarginContainerResponse" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("3_xs0yr")
response_template = NodePath("ResponseContainer")

[node name="ResponseContainer" parent="Balloon/VBoxContainer/MarginContainerResponse/ResponsesMenu" instance=ExtResource("4_xs0yr")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Balloon/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Balloon/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 15

[node name="PanelContainer" type="PanelContainer" parent="Balloon/VBoxContainer/MarginContainer"]
clip_children = 2
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Balloon/VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_j2kku")
theme_override_fonts/mono_font = ExtResource("4_j2kku")
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_bci5f")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 8
text = "Dialogue..."

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/VBoxContainer/MarginContainerResponse/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
